[package]
name = "bus-system"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
serde = "1.0.198"
serde-binary = "0.5.0"
serde_json = "1.0.116"
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
unfold = "0.2.0"
log = "0.4.21"
once_cell = "1.19.0"
futures = "0.3.30"
features = "0.10.0"
forceps = "0.4.1"
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
